--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -4,12 +4,14 @@ body{
   --txt-col: #222;
   --med-txt: #3c3c3c;
   --comp-txt: #ddd;
-  // --light-txt: #ddd;
+  --light-txt: #aaa;
   --comp-clr: #e6e6e6;
   --gray-txt: #555;
   --sat-txt: #777;
   --clrPrm: #0067c0;
   --scroll: rgb(255 255 255 / 80%);
+
+  --active-blue: #0181fd;
 }
 
 .backblur{
