--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -47,3 +47,17 @@ body{
     margin-right: 0.25em;
   }
 }
+
+@keyframes fastfadein {
+  0% {
+    opacity: 0;
+  }
+
+  99% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
