--- a/src/components/background/back.scss
+++ b/src/components/background/back.scss
@@ -1,6 +1,6 @@
 .background {
   min-width: 100vw;
-  min-height: 100vh;
+  min-height: 100%;
   background-color: var(--wintheme);
   background-repeat: no-repeat;
   background-size: cover;
