--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -1,17 +1,122 @@
 .viewport {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   top: 0;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
-.home{
+.home {
+  width: 100%;
+  // height: 100%;
+  // font-size: 3em;
+  font-weight: 600;
+  color: #1e252b;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  // padding: 0 1.6em;
+  .homescreen-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.favorite-bar {
+  width: 100%;
+  // height: 2em;
+  padding: 0 0.5em 0.6em;
+  display: flex;
+  justify-content: space-around;
+}
+
+.homescreen {
+  position: absolute;
+  inset: 0;
+
+  .pages-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.pages-container {
+  .slick-list {
+    flex-grow: 1;
+  }
+
+  .slick-track {
+    height: 100%;
+  }
+
+  .slick-slide > div {
+    height: 100%;
+  }
+
+  .page-container {
+    width: 100%;
+    height: 100%;
+    display: grid !important;
+    place-items: center;
+    padding: 0.5em 0.5em 0 0.5em;
+  }
+
+  .slick-dots {
+    position: relative;
+    bottom: 0;
+
+    li {
+      width: 6px;
+    }
+  }
+}
+
+.grid-page {
   width: 100%;
   height: 100%;
   display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+
+  .page-cell {
+    box-sizing: border-box;
+    border: solid 1px red;
+  }
+}
+
+.cell-container {
+  display: grid;
   place-items: center;
-  font-size: 3em;
-  font-weight: 600;
-  color: #1e252b;
+  align-items: center;
+
+  .app-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .app-name {
+    font-size: 0.8em;
+    color: var(--med-txt);
+    font-weight: 600;
+    margin: 4px 0;
+  }
+}
+
+.uicon[data-padd="true"] {
+  background: #fefefe;
+
+  & > * {
+    transform: scale(0.75);
+  }
 }
