--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -66,9 +66,12 @@
   .page-container {
     width: 100%;
     height: 100%;
-    display: grid !important;
-    place-items: center;
-    padding: 0.5em 0.5em 0 0.5em;
+    display: flex !important;
+    // place-items: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5em;
+    padding-bottom: 0;
   }
 
   .slick-dots {
@@ -83,10 +86,12 @@
 
 .grid-page {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
+  flex-grow: 1;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(6, 1fr);
+  // grid-template-rows: repeat(6, auto);
 
   .page-cell {
     box-sizing: border-box;
@@ -96,6 +101,7 @@
 
 .cell-container {
   display: grid;
+  position: relative;
   place-items: center;
   align-items: center;
 
