--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   --stbar-h: 2.4em;
 }
 
+*[data-ninja="true"]{
+  pointer-events: none;
+}
+
 .uicon {
   position: relative;
   display: grid;
@@ -41,4 +45,43 @@ i[data-flip="true"] {
 .uicon img {
   transform-origin: center;
   transition: 400ms ease-in-out;
+}
+
+.noscroll::-webkit-scrollbar {
+  display: none;
+}
+
+.thinScroll::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+  background-color: transparent;
+}
+
+.medScroll::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+  background-color: transparent;
+}
+
+.thinScroll:hover::-webkit-scrollbar-thumb,
+.medScroll:hover::-webkit-scrollbar-thumb {
+  background: rgba(32, 24, 148, 0.4);
+}
+
+.lightScroll:hover::-webkit-scrollbar-thumb {
+  background: rgba(162, 159, 209, 0.4);
+}
+
+.thinScroll::-webkit-scrollbar-thumb {
+  width: 2px;
+  height: 2px;
+  border-radius: 10px;
+  background-color: transparent;
+}
+
+.medScroll::-webkit-scrollbar-thumb {
+  width: 4px;
+  height: 4px;
+  border-radius: 10px;
+  background-color: transparent;
 }
