--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -126,3 +126,74 @@
     transform: scale(0.75);
   }
 }
+
+.apps-wrapper, .recent-apps-container{
+  position: absolute;
+  inset: 0;
+}
+
+.full-app-container, .recent-app-container{
+  height: 100%;
+
+  .slick-list, .slick-track{
+    height: 100%;
+  }
+
+  .slick-slide > div{
+    height: 100%;
+  }
+}
+
+.recent-apps-container{
+  opacity: 0;
+  transition: opacity 200ms ease-in-out;
+  pointer-events: none;
+
+  &[data-hide="false"]{
+    pointer-events: auto;
+    opacity: 1;
+  }
+}
+
+.recent-slider{
+  height: 100%;
+  transform: scale(1);
+  box-sizing: border-box;
+  transition: transform 200ms ease-in-out;
+
+  &[data-hide="false"]{
+    transform: scale(0.58);
+  }
+
+  .slick-list {
+    margin: 0 -1.5em;
+    overflow: visible;
+  }
+
+  .slick-slide > div {
+    margin: 0 1.5em;
+  }
+}
+
+.mini-app-container{
+  background: #444;
+  height: 100%;
+  border-radius: 2em;
+  // overflow: hidden;
+  position: relative;
+}
+
+.mini-app-icon{
+  width: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transform: translateY(-50%);
+
+  .uicon{
+    width: 20%;
+    border-radius: 36%;
+    // width: max-content;
+  }
+}
