--- a/src/components/background/back.scss
+++ b/src/components/background/back.scss
@@ -1,7 +1,7 @@
 .background {
   min-width: 100vw;
   min-height: 100%;
-  background-color: var(--wintheme);
+  background-color: #fefefe;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
