--- a/src/components/bottomnav/bottom.scss
+++ b/src/components/bottomnav/bottom.scss
@@ -14,7 +14,7 @@
 
   .uicon{
     padding: 0.5em;
-    color: var(--txt-col);
+    color: var(--med-txt);
     // filter: drop-shadow(1px 1px 4px rgba(254, 254, 254, 0.6));
   }
 
