--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -132,7 +132,7 @@
   inset: 0;
 }
 
-.full-app-container, .recent-app-container{
+.full-height-swiper{
   height: 100%;
 
   .slick-list, .slick-track{
