--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   --stbar-h: 2.4em;
 }
 
-*[data-ninja="true"]{
+*[data-ninja="true"] {
   pointer-events: none;
 }
 
@@ -17,7 +17,7 @@
   font-size: 0.64em;
 }
 
-.smooth-trans{
+.smooth-trans {
   transition: all 200ms ease-in-out;
 }
 
@@ -45,6 +45,28 @@ i[data-flip="true"] {
 .uicon img {
   transform-origin: center;
   transition: 400ms ease-in-out;
+}
+
+.imageCont {
+  position: relative;
+  display: grid;
+  place-items: center;
+  width: auto;
+  height: auto;
+}
+
+.imageCont &[data-back="true"] {
+  background-position: center;
+  background-size: cover;
+}
+
+.imageCont img[data-free="false"] {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.imageCont.rounded {
+  overflow: hidden;
 }
 
 .noscroll::-webkit-scrollbar {
@@ -84,4 +106,24 @@ i[data-flip="true"] {
   height: 4px;
   border-radius: 10px;
   background-color: transparent;
+}
+
+.upbug::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -2px;
+  width: 100%;
+  height: 4px;
+  background: #128c7e;
+}
+
+.downbug::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 4px;
+  background: #128c7e;
 }
