--- a/src/containers/apps/themes.scss
+++ b/src/containers/apps/themes.scss
@@ -9,6 +9,7 @@
 
   --teal: #128c7e;
   --teal-dark: #075e54;
+  --light-teal: #02a884;
   --light-green: #25d366;
   --white: #fefefe;
   --blue: #34b7f1;
