--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -144,3 +144,59 @@ body{
     background: rgba(0, 0, 0, 0.25);
   }
 }
+
+.vidCont {
+  .react-video, video {
+    height: 100%;
+  }
+
+  .play-icon{
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 4em;
+    color: var(--white);
+    z-index: 1;
+    opacity: 0;
+    transition: all 200ms ease-in-out;
+  }
+
+  &:hover .play-icon, .play-icon:hover{
+    opacity: 1;
+  }
+
+  .play-icon.opacity-100{
+    opacity: 1;
+  }
+}
+
+.video-control-container{
+  width: 100%;
+  display: flex;
+  align-items: center;
+
+  position: absolute;
+  bottom: 0;
+
+  .video-progress{
+    flex-grow: 1;
+    margin: 0 0.8em;
+  }
+
+  .MuiSlider-rail{
+    background: var(--comp-txt);
+    opacity: 0.8;
+  }
+
+  .MuiSlider-track, .MuiSlider-thumb{
+    opacity: 1;
+  }
+
+  .prog-text{
+    color: var(--comp-txt);
+    font-size: 0.8em;
+    font-weight: 500;
+    padding: 0 0.5em;
+  }
+}
