--- a/src/containers/apps/whatsapp/elements/extra.scss
+++ b/src/containers/apps/whatsapp/elements/extra.scss
@@ -254,7 +254,7 @@
   }
 
   .msg-toast {
-    margin-top: 0.5em;
+    margin: 0.5em 0;
     width: auto;
     max-width: 90%;
     padding: 0.2em 0.5em;
