first yotube commit

--- a/src/components/quickpanel/qkpanel.scss
+++ b/src/components/quickpanel/qkpanel.scss
@@ -54,7 +54,7 @@
   }
 
   border-radius: 0 0 1em 1em;
-  background: #f2f2f2;
+  background: #fefefe;
   transform: translateY(-100%);
   transition: all 0.3s ease-in-out;
 
@@ -97,7 +97,7 @@
 .notif-panel {
   padding-top: 1em;
   text-align: center;
-  
+
   .mini-quick-panel {
     padding: 0 1.6em;
     display: flex;
